test/force-app/main/default/objects/Incentive_Payments__c/Incentive_Payments__c.object-meta.xml
<CustomObject>
    <label>Incentive Payments</label>
    <nameField>
        <displayFormat>AIP{0000}</displayFormat>
        <label>Incentive Payments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>