test/force-app/main/default/objects/Incentive_Payments__c/fields/Capacity_Wdc__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Wdc__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Capacity ($/Wdc)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>