test/force-app/main/default/objects/Incentive_Payments__c/fields/CreateDate__c.field-meta.xml
<CustomField>
    <fullName>CreateDate__c</fullName>
    <formula>DATEVALUE( CreatedDate)</formula>
    <label>CreateDate</label>
    <type>Date</type>
</CustomField>