test/force-app/main/default/objects/Incentive_Payments__c/fields/Dollar__c.field-meta.xml
<CustomField>
    <fullName>Dollar__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Dollar ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>