test/force-app/main/default/objects/Incentive_Payments__c/fields/Energy_KWh__c.field-meta.xml
<CustomField>
    <fullName>Energy_KWh__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Energy ($/KWh)</label>
    <precision>16</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>