test/force-app/main/default/objects/Incentive_Payments__c/fields/Financial_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Financial_Analysis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Analysis</label>
    <referenceTo>PortfolioFinancialAnalysis__c</referenceTo>
    <relationshipLabel>Incentive Payments</relationshipLabel>
    <relationshipName>Incentive_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>