test/force-app/main/default/objects/Incentive_Payments__c/fields/Rec_MWh__c.field-meta.xml
<CustomField>
    <fullName>Rec_MWh__c</fullName>
    <defaultValue>0</defaultValue>
    <label>REC ($/MWh)</label>
    <precision>16</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>