test/force-app/main/default/objects/Incentive_Payments__c/fields/YearAsNumber__c.field-meta.xml
<CustomField>
    <fullName>YearAsNumber__c</fullName>
    <description>Converts text Year field to a number</description>
    <formula>VALUE(YearNumber__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YearAsNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>