test/force-app/main/default/objects/Incentive_Payments__c/fields/YearNumber__c.field-meta.xml
<CustomField>
    <fullName>YearNumber__c</fullName>
    <label>Year</label>
    <length>6</length>
    <type>Text</type>
</CustomField>